# mapredo

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in  mainpage.dox.in
frontend/: main.cpp
mapredo/: CMakeLists.txt  base.cpp  base.h  buffer_trader.cpp  buffer_trader.h  compression.h  config.h.in  config_param.h  consumer.cpp  consumer.h  data_reader.h  directory.cpp  directory.h  directory_win32.h  engine.cpp  engine.h  errno_exception.h  errno_message.cpp  errno_message.h  file_merger.cpp  file_merger.h  lookup.h  mapreducer.h  merge_cache.cpp  settings.h  sorter.cpp  sorter.h  sorter_buffer.h  tmpfile_collector.h  tmpfile_reader.h  valuelist.h
plugins/: CMakeLists.txt  wordcount.cpp  wordcount.h  wordsort.cpp
tests/: CMakeLists.txt  test.cpp
